<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">CANCEL</string>
    <string name="folder_name_hint" translatable="false">Folder Name</string>
    <string name="all_decks" translatable="false">All Decks</string>
    <string name="folders" translatable="false">Folders</string>
    <string name="action_delete_folder" translatable="false">Delete</string>
    <string name="action_add_to_folder" translatable="false">Add To Folder</string>
    <string name="action_copy">Copy Deck</string>
    <string name="action_delete">Delete Deck</string>
    <string name="action_delete_all">Delete All Decks</string>
    <string name="action_details">Details</string>
    <string name="action_edit_deck_name">Edit Deck Name</string>
    <string name="action_filter_by_format">Filter By Format</string>
    <string name="action_import_all_decks">Import All Decks</string>
    <string name="action_language">Language</string>
    <string name="action_share">Share Deck</string>
    <string name="action_share_all_decks">Share All Decks</string>
    <string name="action_switch_layout">Change Deck List Style</string>
    <string name="action_update" translatable="false">Update</string>
    <string name="action_save_preference" translatable="false">Save Preferences</string>
    <string name="action_add_to_favorites">Add To Favorites</string>
    <string name="action_remove_from_favorites">Remove From Favorites</string>
    <string name="app_name" translatable="false">My Decks</string>
    <string name="deck_already_exists">This Deck List already exists. Do you still want to insert it?</string>
    <string name="deck_code_edit_text_hint" translatable="false">Paste deck code here</string>
    <string name="deck_copy_failure">Deck could not be copied</string>
    <string name="deck_copy_success">Deck copied to clipboard</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="edit_deck_name_hint">Enter new deck name</string>
    <string name="generated_by_deck_box">Generated by My Decks</string>
    <string name="heroes">Heroes:</string>
    <string name="intro">Get started by adding a deck from your clipboard</string>
    <string name="koKR" translatable="false">한국어</string>
    <string name="mana_curve">Mana Curve</string>
    <string name="minions">Minions:</string>
    <string name="no">No</string>
    <string name="null_deck_name">Deck</string>
    <string name="ruRU" translatable="false">русский</string>
    <string name="search_hint">Find Decks...</string>
    <string name="search_title">Find Decks</string>
    <string name="snack_bar_delete">1 Deck Deleted</string>
    <string name="snack_bar_delete_all">All Decks Deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="spells">Spells:</string>
    <string name="title_activity_deck_box" translatable="false">DeckBoxActivity</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="use_copied_deck_hint">To use this deck, copy it to your clipboard and create a new deck in Hearthstone</string>
    <string name="weapons">Weapons:</string>
    <string name="yes">Yes</string>
    <string name="zhCN" translatable="false">中文</string>
    <string name="added_to_favorites">Added To Favorites</string>
    <string name="removed_from_favorites">Removed From Favorites</string>
    <string name="about" translatable="false">About</string>
    <string name="not_official_app" translatable="false">This not an official Hearthstone app</string>
    <string name="blizz_trademark" translatable="false">©2014 Blizzard Entertainment, Inc. All rights reserved. Heroes of Warcraft is a trademark, and Hearthstone is a registered trademark of Blizzard Entertainment, Inc. in the U.S. and/or other countries.</string>

</resources>
