<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_deck_name"
        android:orderInCategory="101"
        android:title="@string/action_edit_deck_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_deck"
        android:orderInCategory="99"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details"
        android:orderInCategory="98"
        android:title="@string/action_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="103"
        android:title="@string/action_add_to_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/convert_to_standard"
        android:orderInCategory="104"
        android:title="Convert to Standard"
        app:showAsAction="never"
        />
</menu>