<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kumar.ak.arpit.deckbox.DeckListActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/action_copy"
        android:orderInCategory="101"
        android:title="@string/action_copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_deck"
        android:orderInCategory="99"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_layout"
        android:orderInCategory="100"
        android:title="@string/action_switch_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="103"
        android:title="@string/action_add_to_favorites"
        app:showAsAction="never" />
</menu>
