<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenceActivity">

    <RadioGroup
        android:id="@+id/language_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/en_US"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:text="English"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ru_RU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:text="@string/ruRU"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ko_KR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:text="@string/koKR"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/zh_CN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:text="@string/zhCN"
            android:textAlignment="textStart"
            android:textSize="16sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>

